tests/script_errors/invalid_utf8_2/error.txt
Error: 
    1 | "invalid: \uD800
      |           ^^^^^^ An invalid UTF8 escape sequence was found